加上一些二级界面

--- a/MathWeb/html/academic/administrative_machinery.html
+++ b/MathWeb/html/academic/administrative_machinery.html
@@ -113,11 +113,11 @@
                             本科教学 <span class="caret"></span>
                         </a>
                         <ul role="menu" class="dropdown-menu">
-                            <li><a href="">本科专业</a></li>
-                            <li><a href="">课程建设</a></li>
-                            <li><a href="">教学成果</a></li>
-                            <li><a href="">教改项目</a></li>
-                            <li><a href="">教材建设</a></li>
+                            <li><a href="../benKeJiaoXue/zhuanye.html">本科专业</a></li>
+                            <li><a href="../benKeJiaoXue/kechengjianshe.html">课程建设</a></li>
+                            <li><a href="../benKeJiaoXue/chengguo.html">教学成果</a></li>
+                            <li><a href="../benKeJiaoXue/jiaogaixiangmu.html">教改项目</a></li>
+                            <li><a href="../benKeJiaoXue/jiaocaijianshe.html">教材建设</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -125,10 +125,10 @@
                             科学研究 <span class="caret"></span>
                         </a>
                         <ul role="menu" class="dropdown-menu">
-                            <li><a href="">科研概况</a></li>
-                            <li><a href="">科研项目</a></li>
-                            <li><a href="">科研奖励</a></li>
-                            <li><a href="">学术交流</a></li>
+                            <li><a href="../scientificStudy/keyangaikuang.html">科研概况</a></li>
+                            <li><a href="../scientificStudy/keyanxiangmu.html">科研项目</a></li>
+                            <li><a href="../scientificStudy/keyanjiangli.html">科研奖励</a></li>
+                            <li><a href="../scientificStudy/xueshujiaoliu.html">学术交流</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
