--- a/MathWeb/html/benKeJiaoXue/zhuanye.html
+++ b/MathWeb/html/benKeJiaoXue/zhuanye.html
@@ -5,10 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>本科专业</title>
-
     <!-- Bootstrap -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../css/academic_introduction.css"/>
+    <style>
+        body{
+            background-color:  #F7F7F9;
+        }
+        a:link,a:visited,a:hover,a:active{
+            text-decoration: none;
+        }
+        .navigation{
+            margin-bottom: 0;
+        }
+        .nav-img{
+            /*background-color: #28a4c9;*/
+            margin-top: 0;
+            margin-bottom: 5px;
+            text-align: center;
+            border: 1px groove #31708f;
+        }
+        .main-content .news{
+            border:2px solid #2aabd2;
+            border-radius: 5px;
+            padding: 2px;
+        }
+        .media-content{
+            border: 1px solid #adadad;
+            padding: 2px;
+        }
+        .aside-content h3 span{
+            font-size: 0.2em;
+        }
+        .main-content{
+            margin-top: 30px;
+        }
+        .main-content h2{
+            text-align: center;
+        }
+        .main-content h4{
+            font-weight: bold;
+        }
+
+        .footer-content{
+            border: 1px dotted #adadad;
+            margin-top: 10px;
+        }
+    </style>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -71,11 +113,11 @@
                             本科教学 <span class="caret"></span>
                         </a>
                         <ul role="menu" class="dropdown-menu">
-                            <li><a href="">本科专业</a></li>
-                            <li><a href="">课程建设</a></li>
-                            <li><a href="">教学成果</a></li>
-                            <li><a href="">教改项目</a></li>
-                            <li><a href="">教材建设</a></li>
+                            <li><a href="zhuanye.html">本科专业</a></li>
+                            <li><a href="kechengjianshe.html">课程建设</a></li>
+                            <li><a href="chengguo.html">教学成果</a></li>
+                            <li><a href="jiaogaixiangmu.html">教改项目</a></li>
+                            <li><a href="jiaocaijianshe.html">教材建设</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -83,10 +125,10 @@
                             科学研究 <span class="caret"></span>
                         </a>
                         <ul role="menu" class="dropdown-menu">
-                            <li><a href="">科研概况</a></li>
-                            <li><a href="">科研项目</a></li>
-                            <li><a href="">科研奖励</a></li>
-                            <li><a href="">学术交流</a></li>
+                            <li><a href="../scientificStudy/keyangaikuang.html">科研概况</a></li>
+                            <li><a href="../scientificStudy/keyanxiangmu.html">科研项目</a></li>
+                            <li><a href="../scientificStudy/keyanjiangli.html">科研奖励</a></li>
+                            <li><a href="../scientificStudy/xueshujiaoliu.html">学术交流</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -199,7 +241,9 @@
                 <h2>本科专业</h2>
                 <hr/>
                 <p>  数学与计算科学学院现有三个本科专业：</p>
-
+                <p><a href="">数学与应用数学：</a>湖南省十一五<a href="">重点专业</a></p>
+                <p><a href="">信息与计算科学：</a>教育部第一类特色专业建设点；湖南省十五重点专业；2001年省重点专业评估验收时被评为优秀。</p>
+                <p><a href="">统计学专业：</a>与湖南省统计局于1988年合作创办，为湖南统计系统培养了许多优秀的人才。</p>
             </div>
         </div>
     </div>
